fix: buttonv4 css rainbow effect overflow

--- a/src/components/ButtonV4/ButtonV4.css
+++ b/src/components/ButtonV4/ButtonV4.css
@@ -14,6 +14,7 @@
 }
 
 .buttonv4-btn:before {
+  z-index: 999;
   position: absolute;
   content: "";
   top: -2px;
